--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,12 @@ body {
   color : white;
 }
 #submit{
+  background: transparent;
   display : none;
   color :white;
   border : none;
   cursor : pointer;
-  box-shadow : 0 5px 7px 0 rgba(255,10,100,0.2), 0 7px 20px 0 rgba(255,10,100,0.2);
+  box-shadow : 0 5px 7px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgba(0,0,0,0.2);
   margin-left :200px;
   margin-bottom : 20px;
   padding : 15px 25px;
@@ -18,34 +19,77 @@ body {
 
 .container{
   background-image: url(../images/back.jpg);
+  color: white;
+  font-size: 18px;
 }
+
+#jumbotron{
+  font-family : sans-sans-serif;
+  font-weight : bold;
+  font-size : 35px;
+  letter-spacing: .25em;
+  color: white;
+  text-align: center;
+  padding: 20px;
+
+}
+#instruction{
+  font-size : 20px;
+  font-family : cursive;
+  letter-spacing: .25em;
+  line-height: 1em;
+  margin: 20px;
+  padding : 20px;
+}
+#start{
+  background: transparent;
+  color :white;
+  border : none;
+  cursor : pointer;
+  box-shadow : 0 5px 7px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgba(0,0,0,0.2);
+  margin-left :200px;
+  margin-bottom : 20px;
+  padding : 15px 25px;
+  align-content: center;
+}
+
 #main-page{
   display : none;
+}
+#timer{
+  text-align: center;
+  font-size: 20px;
+  margin: auto;
+  padding:20px;
+}
+#question{
+  margin: auto;
+  padding : 0 30px 20px 30px;
 }
 
 /*MODAL WINDOW STYLING.........................................................*/
 .modal1{
   display : none;
   margin : auto;
-  margin-top : 200px;
+  margin-top : 50px;
   z-index : 1;
   width : 30%;
   height : auto;
   overflow : auto;
-  background : rgba(255, 10, 100, 0.5);
+  background : white;
   font-size : 20px;
   border-radius : 10px;
 }
 .modal-message{
   background : transparent;
-  color : white;
+  color : red;
   margin : 20px 10px;
   padding : 20px;
   width : auto;
 }
 .modal1 button {
   background : transparent;
-  color :white;
+  color :red;
   border : none;
   cursor : pointer;
   box-shadow : 0 5px 7px 0 rgba(255,10,100,0.2), 0 7px 20px 0 rgba(255,10,100,0.2);
